rewrite form-register, form-search, signin-form as mixins

--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -1,4 +1,4 @@
-mixin card-room(slickName, imgNameOne, imgNameTwo, imgNameThree, imgNameFour, number, price, style='--rating: level', feedback, className)
+mixin card-room(slickName, imgList, number, price, style='--rating: level', feedback, className)
     div(class= className, class='card')
       a(href="info-page.html")
         .carousel-container
@@ -8,14 +8,17 @@ mixin card-room(slickName, imgNameOne, imgNameTwo, imgNameThree, imgNameFour, nu
               input(type='radio' id= slickName + '-3' name='carousel[]')
               input(type='radio' id= slickName + '-4' name='carousel[]')
               ul(class= slickName + '__items')
-                li(class= slickName + '__item')
-                  img(src= imgNameOne)
-                li(class=  slickName + '__item')
-                  img(src= imgNameTwo)
-                li(class=  slickName + '__item')
-                  img(src= imgNameThree)
-                li(class=  slickName + '__item')
-                  img(src= imgNameFour)
+                each img in imgList
+                  li(class= slickName + '__item')
+                    img(src= imgName)
+                //- li(class= slickName + '__item')
+                //-   img(src= imgNameOne)
+                //- li(class=  slickName + '__item')
+                //-   img(src= imgNameTwo)
+                //- li(class=  slickName + '__item')
+                //-   img(src= imgNameThree)
+                //- li(class=  slickName + '__item')
+                //-   img(src= imgNameFour)
               .carousel__prev
                 label(for= slickName + '-1')
                 label(for= slickName + '-2')
