--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -1,20 +1,21 @@
 include ../mixins.pug
 include ../../blocks/dropdown/dropdown.pug
 include ../../blocks/airdatepicker/airdatepicker.pug
-.form-search
-    .form-search__container
-      h1(class='title-main form-search__title' style='white-space:pre;') 
-        |Найдём номера под 
-        |  ваши пожелания
-      .row
-        h3(class='title') Прибытие
-        h3(class='title form-search__title_checkout') Выезд
-      div(class='form-search__dropdown')
-        +datepicker()
-      h3(class='title') Гости
-      div(class='form-search__dropdown')
-        +dropdown('Сколько гостей', 'Взрослые', 'Дети', 'Младенцы')
-      div(class='form-search__button_confirm')  
-        a(href='filter-page.html')
-          button(type='button' class='btn  btn-confirm') подобрать номер
-      
+
+mixin form-search(title, subtitle)
+  .form-search
+      .form-search__container
+        h1(class='title-main form-search__title' style='white-space:pre;')
+          |Найдём номера под 
+          |  ваши пожелания
+        .row
+          h3(class='title')= subtitle.checkin
+          h3(class='title form-search__title_checkout')= subtitle.checkout
+        div(class='form-search__dropdown')
+          +datepicker()
+        h3(class='title')= subtitle.guests
+        div(class='form-search__dropdown')
+          +dropdown('Сколько гостей', 'Взрослые', 'Дети', 'Младенцы')
+        div(class='form-search__button_confirm')  
+          a(href='filter-page.html')
+            button(type='button' class='btn  btn-confirm') подобрать номер
