--- a/src/components/filter-page/filter-page.pug
+++ b/src/components/filter-page/filter-page.pug
@@ -1,9 +1,15 @@
+//- include ../../components/header/header.pug
+include ../footer/footer.pug
+include ../header/header.pug
 doctype html
 html
   head
     title my jade template
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
-    include ../header/header.pug
+    +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
+      +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
+      .header-btn-signup
+        +button-signup('Зарегистрироватьcя', 'signup-page.html')
     include ../room-page/room-page.pug
-    include ../footer/footer.pug
+    +footer(['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'] )
