--- a/src/components/signup-page/signup-page.pug
+++ b/src/components/signup-page/signup-page.pug
@@ -1,15 +1,17 @@
 include ../header/header.pug
+include ../form-register/form-register.pug
+include ../footer/footer.pug
 doctype html
 html
   head
     title my jade template
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
-    +header()
+    +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
+      +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
+      .header-btn-signup
+        +button-signup('Зарегистрироватьcя', 'signup-page.html')
     .clear
-
     .sugnup-background
-      include ../form-register/form-register.pug
-    include ../footer/footer.pug
-
-  
+      +form-register( 'Регистрация аккаунта',  'дата рождения', 'данные для входа в сервис', 'Получать спецпредложения', 'Уже есть аккаунт на Toxin')
+    +footer(['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'] )
