--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -10,7 +10,7 @@ mixin card-room(slickName, imgList, number, price, style='--rating: level', feed
               ul(class= slickName + '__items')
                 each img in imgList
                   li(class= slickName + '__item')
-                    img(src= imgName)
+                    img(src= img)
                 //- li(class= slickName + '__item')
                 //-   img(src= imgNameOne)
                 //- li(class=  slickName + '__item')
