--- a/src/blocks/room-information/room-information.pug
+++ b/src/blocks/room-information/room-information.pug
@@ -1,6 +1,6 @@
 mixin room-information(icon, quality, descr, className)
     div(class='room__information')
-      div(class='room__information__wrapper' class= className)
+      div(class='room__information__wrapper row' class= className)
          i(class='material-icons')= icon
          div(class='room__information__wrapper__description')
             h4= quality
