--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -43,21 +43,21 @@ include ../../blocks/range-slider/range-slider.pug
                 i(class='fa fa-arrow-right')
         .wrapper_content
             .content
-                    +card-room('carousel', require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), 888, '9  990₽', '--rating: 5', 145, 'room-card__decor')
-                    +card-room('carousel1', require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), 840,'9  900₽', '--rating: 4', 65 , 'room-card__decor')
-                    +card-room('carousel2', require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), 980, '8 500₽', '--rating: 3', 35, 'room-card__decor')
+                +card-room('carousel', [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')], 888, '9  990₽', '--rating: 5', 145, 'room-card__decor')
+                +card-room('carousel1', [require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg'), require('./images/room2.jpg')], 840,'9  900₽', '--rating: 4', 65 , 'room-card__decor')
+                +card-room('carousel2', [require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg')], 980, '8 500₽', '--rating: 3', 35, 'room-card__decor')
                
-                    +card-room('carousel3', require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), 856, '7 300₽', '--rating: 5', 19, 'room-card__decor')
-                    +card-room('carousel4', require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg'), 740, '6 000₽', '--rating: 4', 44, 'room-card__decor')
-                    +card-room('carousel5', require('./images/room6.jpg'), require('./images/room6.jpg'), require('./images/room6.jpg'), require('./images/room6.jpg'), 982, '5 800₽', '--rating: 3', 56, 'room-card__decor')
+                +card-room('carousel3', [require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg')], 856, '7 300₽', '--rating: 5', 19, 'room-card__decor')
+                +card-room('carousel4', [require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg'), require('./images/room5.jpg')], 740, '6 000₽', '--rating: 4', 44, 'room-card__decor')
+                +card-room('carousel5', [require('./images/room6.jpg'), require('./images/room6.jpg'), require('./images/room6.jpg'), require('./images/room6.jpg')], 982, '5 800₽', '--rating: 3', 56, 'room-card__decor')
                 
-                    +card-room('carousel6', require('./images/room7.jpg'), require('./images/room7.jpg'), require('./images/room7.jpg'), require('./images/room7.jpg'), 678, '5 500₽', '--rating: 5', 45, 'room-card__decor')
-                    +card-room('carousel7', require('./images/room8.jpg'), require('./images/room8.jpg'), require('./images/room8.jpg'), require('./images/room8.jpg'), 450, '5 300₽', '--rating: 4', 39, 'room-card__decor')
-                    +card-room('carousel8', require('./images/room9.jpg'), require('./images/room9.jpg'), require('./images/room9.jpg'), require('./images/room9.jpg'), 350, '5 000₽', '--rating: 3', 77, 'room-card__decor')
+                +card-room('carousel6', [require('./images/room7.jpg'), require('./images/room7.jpg'), require('./images/room7.jpg'), require('./images/room7.jpg')], 678, '5 500₽', '--rating: 5', 45, 'room-card__decor')
+                +card-room('carousel7', [require('./images/room8.jpg'), require('./images/room8.jpg'), require('./images/room8.jpg'), require('./images/room8.jpg')], 450, '5 300₽', '--rating: 4', 39, 'room-card__decor')
+                +card-room('carousel8', [require('./images/room9.jpg'), require('./images/room9.jpg'), require('./images/room9.jpg'), require('./images/room9.jpg')], 350, '5 000₽', '--rating: 3', 77, 'room-card__decor')
   
-                    +card-room('carousel9', require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), 666, '5 000₽', '--rating: 5', 25, 'room-card__decor')
-                    +card-room('carousel10', require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), 444, '5 000₽', '--rating: 4', 15, 'room-card__decor')
-                    +card-room('carousel11', require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'),  352, '5 000₽', '--rating: 3', 55, 'room-card__decor')
+                +card-room('carousel9', [require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg'), require('./images/room1.jpg')], 666, '5 000₽', '--rating: 5', 25, 'room-card__decor')
+                +card-room('carousel10', [require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg'), require('./images/room3.jpg')], 444, '5 000₽', '--rating: 4', 15, 'room-card__decor')
+                +card-room('carousel11', [require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg'), require('./images/room4.jpg')],  352, '5 000₽', '--rating: 3', 55, 'room-card__decor')
 
         include ../../blocks/panagination/panagination.pug
         p(class="panagination-subtitle") 1 – 12 из 100+ вариантов аренды
