--- a/src/blocks/dropdown/dropdown.pug
+++ b/src/blocks/dropdown/dropdown.pug
@@ -1,52 +1,55 @@
-mixin dropdown(name, title1, title2, title3 )
+mixin dropdown(title,  subtitle1,  subtitle2,  subtitle3) 
   label.dropdowns
-    .dd-button(id='dd-text')= name
+    .dd-button(id= title.id)= title.name
     input(type='checkbox' class='dd-input' id='test')
     ul(class='dd-menu')
       li()
-        p(class='title')= title1
+        p(class='title')= subtitle1.name
         .flex-row
-          button(class='plus button' id='adult_plus') +
-          p(class='text' id='adult_text') 0
-          button(class='minus button' id='adult_minus') -
+          button(class='plus button' id= subtitle1.plus) +
+          p(class='text' id= subtitle1.number) 0
+          button(class='minus button' id= subtitle1.minus) -
       li()
-        p(class='title')= title2
+        p(class='title')= subtitle2.name
         .flex-row
-          button(class='plus button' id='child_plus') +
-          p(class='text' id='child_text') 0
-          button(class='minus button' id='child_minus') -
+          button(class='plus button' id= subtitle2.plus) +
+          p(class='text' id= subtitle2.number) 0
+          button(class='minus button' id= subtitle2.minus) -
       li( )
-        p(class='title')= title3
+        p(class='title')= subtitle3.name
         .flex-row
-          button(class='plus button' id='baby_plus') +
-          p(class='text' id='baby_text') 0
-          button(class='minus button' id='baby_minus') -
+          button(class='plus button' id= subtitle3.plus) +
+          p(class='text' id= subtitle3.number) 0
+          button(class='minus button' id= subtitle3.minus) -
       li( )
           button(class='clean' id='clean') Очистить
           button(class='apply' id='apply') Применить  
 
-  //- label.dropdowns
-  //-   .dd-button(id='dd-text')  Сколько гостей
-  //-   input(type='checkbox' class='dd-input' id='test')
-  //-   ul(class='dd-menu')
-  //-     li()
-  //-       p(class='title') Взрослые
-  //-       .flex-row
-  //-         button(class='plus button' id='adult_plus') +
-  //-         p(class='text' id='adult_text') 0
-  //-         button(class='minus button' id='adult_minus') -
-  //-     li()
-  //-       p(class='title') Дети
-  //-       .flex-row
-  //-         button(class='plus button' id='child_plus') +
-  //-         p(class='text' id='child_text') 0
-  //-         button(class='minus button' id='child_minus') -
-  //-     li( )
-  //-       p(class='title') Младенцы
-  //-       .flex-row
-  //-         button(class='plus button' id='baby_plus') +
-  //-         p(class='text' id='baby_text') 0
-  //-         button(class='minus button' id='baby_minus') -
-  //-     li( )
-  //-         button(class='clean' id='clean') Очистить
-  //-         button(class='apply' id='apply') Применить  
+//- mixin dropdown(title, subtitle1, subtitle2, subtitle3) 
+//-   label.comfort
+//-     .comfort__button(id= title.id)= title.name
+//-     input(type='checkbox' class='comfort__input' id='comfort__input')
+//-     ul(class='comfort__menu')
+//-       li.flex-row
+//-         p(class='title')= subtitle1.name
+//-         .flex-row
+//-           button(class='plus button' id= subtitle1.plus) +
+//-           p(class='text' id= subtitle1.number) 0
+//-           button(class='minus button' id= subtitle1.minus) -
+//-       li.flex-row
+//-         p(class='title')= subtitle2.name
+//-         .flex-row
+//-           button(class='plus button' id= subtitle2.plus) +
+//-           p(class='text' id= subtitle2.number) 0
+//-           button(class='minus button' id= subtitle2.minus) -
+//-       li.flex-row
+//-         p(class='title')= subtitle3.name
+//-         .flex-row
+//-           button(class='plus button' id= subtitle3.plus) +
+//-           p(class='text' id= subtitle3.number) 0
+//-           button(class='minus button' id= subtitle3.minus) -
+//-       li.flex-row
+//-           button(class='clean' id='comfort-clean') Очистить
+//-           button(class='apply' id='comfort-apply') Применить
+
+
