--- a/src/components/filter-page/filter-page.pug
+++ b/src/components/filter-page/filter-page.pug
@@ -4,7 +4,7 @@ include ../header/header.pug
 doctype html
 html
   head
-    title my jade template
+    title
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
