--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -35,7 +35,7 @@ div(class='information')
             div(class='flex-row')
                 .blocks.information-rules
                     h3(class='information-title information-title--rules') Правила
-                    +bullet-list('Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00' + ', '   +  ' а выезд до 12:00 ')
+                    +bullet-list(['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00' + ', '   +  ' а выезд до 12:00 '])
                 .blocks.information-cancel
                     h3(class='information-title information-title--cancel') Отмена
                     p(style='white-space:pre;' class='information-text')
