--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -15,7 +15,9 @@ mixin form-search(title, subtitle)
           +datepicker()
         h3(class='title')= subtitle.guests
         div(class='form-search__dropdown')
-          +dropdown('Сколько гостей', 'Взрослые', 'Дети', 'Младенцы')
+          //- include ../../blocks/dropdown/dropdown.pug
+          +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
         div(class='form-search__button_confirm')  
           a(href='filter-page.html')
             button(type='button' class='btn  btn-confirm') подобрать номер
+            //-  +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
